2009-11-19  Beth Dakin  <bdakin@apple.com>

       Build fix. No review needed.

        * platform/graphics/qt/StillImageQt.cpp:
        (WebCore::StillImage::draw):
        * platform/graphics/qt/StillImageQt.h:

2009-11-19  Beth Dakin  <bdakin@apple.com>

       Build fix. No review needed.

        * rendering/RenderThemeWin.cpp:
        (WebCore::RenderThemeWin::paintSearchFieldCancelButton):
        (WebCore::RenderThemeWin::paintSearchFieldResultsDecoration):
        (WebCore::RenderThemeWin::paintSearchFieldResultsButton):

2009-11-19  Beth Dakin  <bdakin@apple.com>

       Build fix. No review needed.

        * plugins/PluginView.cpp:
        (WebCore::PluginView::paintMissingPluginIcon):

2009-11-19  Beth Dakin  <bdakin@apple.com>

        Build fix. No review needed.

        * platform/graphics/win/ImageCGWin.cpp:
        (WebCore::BitmapImage::getHBITMAPOfSize):
        (WebCore::BitmapImage::drawFrameMatchingSourceSize):

2009-11-19  Beth Dakin  <bdakin@apple.com>

        Reviewed by Darin Adler.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=31321 Make -webkit-
        color-correction work with untagged images

        Image's draw(), drawPattern(), and fillWithSolidColor() functions 
        now take a ColorSpace. A bunch of classes inherit from Image, so 
        draw() and drawPattern() functions there must also take a 
        ColorSpace.
        * platform/graphics/Image.cpp:
        (WebCore::Image::fillWithSolidColor):
        (WebCore::Image::drawTiled):
        * platform/graphics/Image.h:
        * platform/graphics/BitmapImage.h:
        * platform/graphics/GeneratedImage.cpp:
        (WebCore::GeneratedImage::draw):
        (WebCore::GeneratedImage::drawPattern):
        * platform/graphics/GeneratedImage.h:
        * platform/graphics/cg/PDFDocumentImage.cpp:
        (WebCore::PDFDocumentImage::draw):
        * platform/graphics/cg/PDFDocumentImage.h:
        * svg/graphics/SVGImage.cpp:
        (WebCore::SVGImage::draw):